web/book/tests/snapshots/snapshot__tests__prql__transforms__aggregate-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\naggregate [\n  average salary,\n  ct = count\n]\n"
---
SELECT
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees

