web/book/tests/snapshots/snapshot__tests__prql__transforms__aggregate-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup [title, country] (\n  aggregate [\n    average salary,\n    ct = count\n  ]\n)\n"
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
GROUP BY
  title,
  country

