web/book/tests/snapshots/snapshot__tests__prql__transforms__aggregate-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [avg_sal = average salary]\n"
---
SELECT
  *,
  AVG(salary) OVER () AS avg_sal
FROM
  employees

