web/book/tests/snapshots/snapshot__tests__prql__transforms__derive-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = salary + payroll_tax\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees

