web/book/tests/snapshots/snapshot__tests__prql__transforms__filter-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter (age > 25 or department != \"IT\")\n"
---
SELECT
  *
FROM
  employees
WHERE
  age > 25
  OR department <> 'IT'

