web/book/tests/snapshots/snapshot__tests__prql__transforms__filter-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter (age | in 25..40)\n"
---
SELECT
  *
FROM
  employees
WHERE
  age BETWEEN 25 AND 40

