web/book/tests/snapshots/snapshot__tests__prql__transforms__from-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e = employees\nselect e.first_name\n"
---
SELECT
  first_name
FROM
  employees AS e

