web/book/tests/snapshots/snapshot__tests__prql__transforms__group-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort join_date\ntake 1\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  join_date
LIMIT
  1

