web/book/tests/snapshots/snapshot__tests__prql__transforms__join-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\njoin positions [==emp_no]\n"
---
SELECT
  employees.*,
  positions.*
FROM
  employees
  JOIN positions ON employees.emp_no = positions.emp_no

